force-app/main/default/objects/Flight__c/Flight__c.object-meta.xml
<CustomObject>
    <label>Flight</label>
    <pluralLabel>Flights</pluralLabel>
    <description>Master flight schedule containing recurring flight routes, times, and pricing for Skywave Airlines operations</description>
    <nameField>
        <label>Flight Number</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>