force-app/main/default/objects/Flight__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>Indicates whether this flight is currently active in the schedule and available for booking</description>
    <inlineHelpText>Check to make this flight available for booking. Uncheck to remove from active schedule.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>