force-app/main/default/objects/Flight__c/fields/Aircraft__c.field-meta.xml
<CustomField>
    <fullName>Aircraft__c</fullName>
    <label>Aircraft</label>
    <description>Specific physical aircraft (Asset, identified by tail number) assigned to this scheduled flight. The Asset's Product2 carries the aircraft type and seat-map definition. Coexists with the legacy Aircraft_Type__c text field for backward compatibility with existing agent actions.</description>
    <type>Lookup</type>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Skywave_Flights</relationshipName>
    <relationshipLabel>Skywave Flights</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>