force-app/main/default/objects/Flight__c/fields/Aircraft_Type__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Type__c</fullName>
    <label>Aircraft Type</label>
    <description>Model and type of aircraft used for this flight</description>
    <inlineHelpText>Enter the aircraft model (e.g., Boeing 737-800, Airbus A320)</inlineHelpText>
    <type>Text</type>
    <length>50</length>
</CustomField>