force-app/main/default/objects/Flight__c/fields/Base_Price_Basic__c.field-meta.xml
<CustomField>
    <fullName>Base_Price_Basic__c</fullName>
    <label>Base Price - Basic</label>
    <description>Base pricing for Basic fare class on this flight route</description>
    <inlineHelpText>Enter the base price in USD for Basic fare class (e.g., 287.00)</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>