force-app/main/default/objects/Flight__c/fields/Base_Price_Business__c.field-meta.xml
<CustomField>
    <fullName>Base_Price_Business__c</fullName>
    <label>Base Price - Business</label>
    <description>Base pricing for Business fare class on this flight route</description>
    <inlineHelpText>Enter the base price in USD for Business fare class (e.g., 517.00)</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>