force-app/main/default/objects/Flight__c/fields/Base_Price_Choice__c.field-meta.xml
<CustomField>
    <fullName>Base_Price_Choice__c</fullName>
    <label>Base Price - Choice</label>
    <description>Base pricing for Choice fare class on this flight route</description>
    <inlineHelpText>Enter the base price in USD for Choice fare class</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>