force-app/main/default/objects/Flight__c/fields/Base_Price_Choice_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Base_Price_Choice_Preferred__c</fullName>
    <label>Base Price - Choice Preferred</label>
    <description>Base pricing for Choice Preferred fare class on this flight route</description>
    <inlineHelpText>Enter the base price in USD for Choice Preferred fare class</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>