force-app/main/default/objects/Flight__c/fields/Base_Price_First__c.field-meta.xml
<CustomField>
    <fullName>Base_Price_First__c</fullName>
    <label>Base Price - First</label>
    <description>Base pricing for First fare class on this flight route</description>
    <inlineHelpText>Enter the base price in USD for First fare class (e.g., 717.00)</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>