force-app/main/default/objects/Flight__c/fields/Base_Price_Premium_Economy__c.field-meta.xml
<CustomField>
    <fullName>Base_Price_Premium_Economy__c</fullName>
    <label>Base Price - Premium Economy</label>
    <description>Base pricing for Premium Economy fare class on this flight route</description>
    <inlineHelpText>Enter the base price in USD for Premium Economy fare class (e.g., 373.00)</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>