force-app/main/default/objects/Flight__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Destination</label>
    <description>Arrival airport IATA code for this flight route</description>
    <inlineHelpText>Enter the 3-letter IATA airport code for the arrival airport (e.g., JFK for John F. Kennedy International)</inlineHelpText>
    <type>Text</type>
    <length>3</length>
    <required>true</required>
</CustomField>