force-app/main/default/objects/Flight__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <label>Duration (Minutes)</label>
    <description>Total flight duration in minutes from departure to arrival</description>
    <inlineHelpText>Enter the total flight time in minutes (e.g., 320 for a 5 hour 20 minute flight)</inlineHelpText>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>