force-app/main/default/objects/Flight__c/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <label>Flight Number</label>
    <description>Unique identifier for this flight in the airline's schedule system</description>
    <inlineHelpText>Enter the flight number (e.g., SW1388). This must be unique across all flights.</inlineHelpText>
    <type>Text</type>
    <length>10</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <required>true</required>
</CustomField>