force-app/main/default/objects/Flight__c/fields/Operates_Friday__c.field-meta.xml
<CustomField>
    <fullName>Operates_Friday__c</fullName>
    <label>Operates Friday</label>
    <description>Indicates whether this flight operates on Fridays</description>
    <inlineHelpText>Check if this flight operates on Fridays</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>