force-app/main/default/objects/Flight__c/fields/Operates_Monday__c.field-meta.xml
<CustomField>
    <fullName>Operates_Monday__c</fullName>
    <label>Operates Monday</label>
    <description>Indicates whether this flight operates on Mondays</description>
    <inlineHelpText>Check if this flight operates on Mondays</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>