force-app/main/default/objects/Flight__c/fields/Operates_Saturday__c.field-meta.xml
<CustomField>
    <fullName>Operates_Saturday__c</fullName>
    <label>Operates Saturday</label>
    <description>Indicates whether this flight operates on Saturdays</description>
    <inlineHelpText>Check if this flight operates on Saturdays</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>