force-app/main/default/objects/Flight__c/fields/Operates_Sunday__c.field-meta.xml
<CustomField>
    <fullName>Operates_Sunday__c</fullName>
    <label>Operates Sunday</label>
    <description>Indicates whether this flight operates on Sundays</description>
    <inlineHelpText>Check if this flight operates on Sundays</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>