force-app/main/default/objects/Flight__c/fields/Operates_Thursday__c.field-meta.xml
<CustomField>
    <fullName>Operates_Thursday__c</fullName>
    <label>Operates Thursday</label>
    <description>Indicates whether this flight operates on Thursdays</description>
    <inlineHelpText>Check if this flight operates on Thursdays</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>