force-app/main/default/objects/Flight__c/fields/Operates_Tuesday__c.field-meta.xml
<CustomField>
    <fullName>Operates_Tuesday__c</fullName>
    <label>Operates Tuesday</label>
    <description>Indicates whether this flight operates on Tuesdays</description>
    <inlineHelpText>Check if this flight operates on Tuesdays</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>