force-app/main/default/objects/Flight__c/fields/Operates_Wednesday__c.field-meta.xml
<CustomField>
    <fullName>Operates_Wednesday__c</fullName>
    <label>Operates Wednesday</label>
    <description>Indicates whether this flight operates on Wednesdays</description>
    <inlineHelpText>Check if this flight operates on Wednesdays</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>