force-app/main/default/objects/Flight__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <description>Departure airport IATA code for this flight route</description>
    <inlineHelpText>Enter the 3-letter IATA airport code for the departure airport (e.g., SEA for Seattle-Tacoma International)</inlineHelpText>
    <type>Text</type>
    <length>3</length>
    <required>true</required>
</CustomField>