force-app/main/default/objects/Flight__c/fields/Scheduled_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Arrival_Time__c</fullName>
    <label>Scheduled Arrival Time</label>
    <description>Standard arrival time for this flight in the daily schedule</description>
    <inlineHelpText>Enter the scheduled arrival time (e.g., 02:50 PM). This is the recurring time this flight arrives each day it operates.</inlineHelpText>
    <type>Time</type>
    <required>true</required>
</CustomField>